Update changelog with Conversation Simulator improvements
Replaced the self sign-on authentication providers entry with a note about the Conversation Simulator leveraging the agent's retrieval context for more realistic user reactions and improved validation of grounded answers.

--- a/snippets/changelog/2025-10-15.html
+++ b/snippets/changelog/2025-10-15.html
@@ -87,7 +87,7 @@
                 <ul style="color: #171717; font-size: 16px">
                   <li>Dynamic Export of Test Cases (via a CSV file) instead of the original static one.</li>
                   <li>General UX improvements plus capacity to edit entities from within the tables (Test Cases, Evaluations, Versions...).</li>
-                  <li>Self sign-on with multiple authentication providers (Google, Microsoft, GitHub...)</li>
+                  <li>Conversation Simulator will leverage the agent's retrieval context to better mimic user reactions (for example, a simulated user can say "I don't see that" if a suggested action isn't present in the retrieved context), enabling stronger validation of grounded answers.</li>
                 </ul>
                 <p style="margin-top: 35px; color: #171717; font-size: 16px">Stay tuned!</p>
                 <p style="margin-left: 35px"><strong> - Galtea Team</strong></p>
