--- a/snippets/changelog/2025-10-27.html
+++ b/snippets/changelog/2025-10-27.html
@@ -50,11 +50,16 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-10-27_partial-prompt-metric.png" alt="Creating a metric with the new Partial Prompt method" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <h3 style="color: #171717">Conversation Simulator Now Validates Grounded Responses</h3>
+                <h3 style="color: #171717">Quality Generator with Improved Language Handling</h3>
                 <p style="color: #171717; font-size: 16px">
-                  Our <a href="https://docs.galtea.ai/concepts/product/test/case/conversation-simulator" style="color: #5286ff">Conversation Simulator</a> just got smarter. It now takes the agent's
-                  <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">retrieval_context</code> into account, enabling the synthetic user to react dynamically. For example, if your RAG-based agent
-                  hallucinates a fact, the simulator can now challenge it, providing a powerful new way to test the groundedness of your conversational AI.
+                  The LLM language confusion is now patched for the quality generator. Languages are formally detected for the whole document, and test cases are ensured to be generated with the correct language. This ensures more accurate and contextually appropriate test case generation across
+                  different language inputs.
+                </p>
+
+                <h3 style="color: #171717">Improved Long Context Processing for Quality Test Cases</h3>
+                <p style="color: #171717; font-size: 16px">
+                  Our quality generator now intelligently processes long documents, ensuring optimal context is provided for the best quality generation of test cases. This enhancement streamlines the evaluation process and improves the reliability of generated test cases for comprehensive quality
+                  assessments.
                 </p>
 
                 <h3 style="color: #171717">Platform Experience Enhancements</h3>
