Improve changelog formatting for code references
Updated the changelog to use styled <code> elements for parameters and file names, enhancing readability and consistency in the presentation of technical details.

--- a/snippets/changelog/2025-11-10.html
+++ b/snippets/changelog/2025-11-10.html
@@ -59,13 +59,20 @@
                 <ul style="color: #171717; font-size: 16px">
                   <li><strong>See What's Under the Hood:</strong> The models used to generate a <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5286ff">Test</a> are now listed in the test's details section, providing clearer insight into how your test cases were created.</li>
                   <li><strong>Faster Test Generation:</strong> We've significantly sped up the processing of multiple files within ZIP archives when generating tests from a knowledge base.</li>
-                  <li><strong>Smarter Test Case Handling:</strong> The engine for generating <a href="https://docs.galtea.ai/concepts/product/test/quality-tests" style="color: #5286ff">Quality Tests</a> now handles the `max_test_cases` parameter more effectively.</li>
+                  <li>
+                    <strong>Smarter Test Case Handling:</strong> The engine for generating <a href="https://docs.galtea.ai/concepts/product/test/quality-tests" style="color: #5286ff">Quality Tests</a> now handles the
+                    <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">max_test_cases</code> parameter more effectively.
+                  </li>
                 </ul>
 
                 <h3 style="color: #171717">Fixes & Improvements</h3>
                 <ul style="color: #171717; font-size: 16px">
                   <li>Fixed a bug where file names from ZIP archives were not displayed correctly in the UI.</li>
-                  <li>Resolved an issue that prevented the processing of ZIP files containing two files with the same name (e.g., `folder1/file.txt` and `folder2/file.txt`).</li>
+                  <li>
+                    Resolved an issue that prevented the processing of ZIP files containing two files with the same name (e.g.,
+                    <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">folder1/file.txt</code> and
+                    <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">folder2/file.txt</code>).
+                  </li>
                 </ul>
 
                 <br />
